site/sass/wea.scss
/* ... */
/*div[data-type='listFigure']{
    display:flex;
    flex-direction:row;
    flex-wrap:wrap;
    
}

{
    width:8rem;
    padding:5%;
    margin:.5rem;
    font-size:90%;
    border:1px solid black;
}

div[data-type="listFigure"] > div:target{
    border: 1px solid var(--wea-pink);
}


div[data-type='listFigure'] img{
    max-width:8rem;
    height:auto;
}
*/
/******************************************************* LIST EVENT HANDLING ************ */


[data-el="listEvent"]{
      margin-top:1.56rem;
  margin-bottom:0;
  display:flex;
  flex-direction:column;
  margin-left:50%;
  width:100%;
}

[data-el='event']{
  width:50%;
  position:relative;
  border-left:5px solid pink;
  padding:2.441rem 0;
}


[data-el='event'] > * {
  padding:.25rem 1.5rem;
}



[data-el='event'] > div[data-el='p']{
    margin-top:0;
    margin-bottom:0;
    padding:0.8rem 2.441rem;
}

[data-el='event']:nth-of-type(2n+1) > div[data-el='p']{
    padding-right:0;
}

[data-el='event']:nth-of-type(2n) > div[data-el='p']{
    padding-left:0;
}




[data-el='event']:nth-of-type(2n){
  right:50%;
  border-right:5px solid pink;
  border-left:none;

}

[data-el='event']:nth-of-type(2n) > *{
  text-align:right;
}

[data-el='event']:nth-of-type(2n) [data-el='ab'][data-type='graphic']{
    position:relative;
}


[data-el='event']  [data-el='label']{
  display:block;
  font-size:1.953rem;
  font-family:"Serif";
}

[data-el='event']:hover{
    border-color:var(--wea-pink);
    transition: border-color 0.25s ease-in-out;
}
/* ***************************************************** TIMELINE DECADE NAV ********** */
#timeline .decadeNav{
    position: sticky;
    top: var(--header-height);
    z-index: 7000;
    background: var(--wea-header-bg-color);
    border-bottom: 1px solid #dedede;
    margin: 0 0 1.5rem 0;
    padding: 0.4rem 0.5rem;
}
#timeline .decadeNav ul{
    list-style: none;
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    justify-content: center;
    gap: 0.3rem 0.4rem;
    margin: 0;
    padding: 0;
}
#timeline .decadeNav li{
    margin: 0;
}
#timeline .decadeNav a{
    display: inline-block;
    padding: 0.2rem 0.7rem;
    border: 1px solid var(--wea-pink);
    border-radius: 999px;
    font-size: 0.95rem;
    line-height: 1.3;
    text-decoration: none;
    color: var(--wea-pink);
    white-space: nowrap;
    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
}
#timeline .decadeNav a:hover,
#timeline .decadeNav a:focus{
    background: var(--wea-pink);
    color: #fff;
}
/* Offset jump targets so they clear both the header and the sticky decade nav */
#timeline #mainBody [data-el='event'][id]{
    scroll-margin-top: calc(var(--header-height) + 3.5rem);
}

figcaption{
    font-size: 0.7rem;
    line-height: 1.4;
}


/* ***************************************************** ADDITIONAL INFO PANEL ********** */
#additional_info{
    grid-area: additional_info;
    padding-bottom: 1rem;

   
}

#additional_info > details{
    margin-top:1rem;
    background: var(--wea-additional-info-bg-color);
    box-shadow: 1px 1px 1px 1px #dcdcdc;
    
}

#additional_info .content{
    display:flex;
    flex-flow: column;
    align-content: baseline;
    padding-left: 2rem;
    
}

details.expandable > summary{
    list-style-type:none;
    &::-webkit-details-marker,
    &::marker{
        display:none;
    }
}

:root{
    --accordion-easing: cubic-bezier(0.45,0.05,0.55,0.95);
    --accordion-duration: 0.3s;
}

.expandable .content{
    padding-bottom:.25rem;
}

details .content{
    transition: opacity var(--accordion-duration) var(--accordion-easing);
}

details[aria-expanded='false'] .content{
    opacity: 0;
}

details[aria-expanded='true'] .content{
    opacity: 1;
}



details > summary {
    cursor:pointer;
    padding:1rem;
    -webkit-user-select: none;
-moz-user-select: none;
-ms-user-select: none;
-o-user-select: none;
user-select: none;
    
}

.JS .additionalInfoHeader > span.mi{
    display:inline-block;
    float:right;
        font-variant:none;
}

.expandable[aria-expanded='true'] span.mi{
    transform: rotate(90deg);
    transition: transform  .5s;
}


.expandable[aria-expanded='false'] span.mi{
    transform: rotate(0deg);
    transition: transform .5s;
}

/********* RELATED ITEMS BLOCK */

#relatedItems .content{
    padding-left:0;
    padding-right:0;
    margin:0;
    flex-direction: row;
    .next_prev{
        visibility:hidden;
        border:none;
        margin:0;
        padding:0.6rem;
        font-size: 1.6rem;
        opacity: 0.6;
        transition: opacity 0.3s ease-in-out;
        cursor: pointer;

        &:hover{
           opacity:1;
        }
        &:disabled{
          opacity:0;
        }
    }
    &.scroll-visible{
        .next_prev{
            visibility: visible;
        }
        .related-items{
            overflow-x:hidden;
        }
    }
}



.related-items {
  gap: 1.5rem;
  display:flex;
  flex-direction: row;
  padding-right: 2rem;
  list-style-type:none;
  padding-bottom: 1rem;
  scroll-snap-type: x mandatory;
  overflow-x: auto;
  scroll-behavior: smooth;
  overscroll-behaviour-inline: contain;
  -webkit-overflow-scrolling: touch;
}

.related-item{
    scroll-snap-align: start;
    padding-left:0;
	box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
	transition: box-shadow 0.2s ease-in-out;
	display:flex;
	flex-direction:column;
	a{
	    flex: 1;
	      display: flex;
  font-size: 0.9rem;
  padding: 0.85rem;
  align-content: center;
	}
	a, figure{
	    display:flex;
	    flex-direction:column;
	}
	figure{
        height: 100%;
        justify-content: space-between;
        align-items: center;
        gap: 0.5rem;
	}
	&:hover{
	        box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
	    
	}
	
}


#relatedItems .content > div > *{
    margin:0 auto;
}

.content img{
    max-width:8rem;
}
/* ... */

